Fri Jun 18 13:56:01 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/IDL3_to_IDL2/IDL3_to_IDL2.mpc:
        * tools/IDL3_to_XMI/IDL3_TO_XMI.mpc:

          Remove mcpp.

Fri Jun 18 13:43:02 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * examples/Hello/Sender/Sender.idl:
        * examples/Hello/Sender/Sender_exec.h:
        * examples/Hello/Sender/Sender_exec.cpp:
        * examples/Hello/descriptors/DeploymentPlan.cdp:
        * examples/Hello/descriptors/DeploymentPlan_without_ns.cdp:
        * examples/Hello/descriptors/PlanLocality_DifferentProcesses.cdp:
        * examples/Hello/descriptors/PlanLocality_SameProcess.cdp:

          Removed un-needed complex types from this example.

Fri Jun 18 12:13:33 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/Deployment/descriptors/Plan.cdp:
          Set domain_id to 0 because the RTI shapes demo only listens
          on Domain 0.

        * connectors/dds4ccm/tutorials/Shapes/Tutorial/01_general.html:
          Update.

Fri Jun 18 12:13:48 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/dds/Getter_T.cpp:
          Layout changes

Fri Jun 18 12:04:03 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/dds/DataReaderListener_T.cpp:
        * connectors/dds4ccm/impl/dds/DataReaderStateListener_T.cpp:
        * connectors/dds4ccm/impl/dds/DataReader_T.h:
        * connectors/dds4ccm/impl/dds/DataReader_T.cpp:
        * connectors/dds4ccm/impl/dds/Getter_T.cpp:
          Code cleanup

Fri Jun 18 12:03:29 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Scheduler/Deployment_Event.cpp:

          Compile fix for non-inline builds.

Fri Jun 18 11:40:01 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Tutorial/06_compilation.html: